[package]
name = "streamer_notify"
version = "0.1.0"
description = "yeah."
repository = "https://github.com/misilelab/StreamerAutoNotification"
authors = ["MisileLaboratory"]
readme = "README.md"
license-file = "LICENSE.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.11", features = ["json"]}
serde = {version = "1.0.138", features = ["derive"]}
async-trait = "0.1.56"
